<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:textSize="40sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <EditText
        android:id="@+id/edtNum1"
        android:layout_width="match_parent"
        android:hint="@string/hint_edtNum1"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtNum2"
        android:layout_width="match_parent"
        android:hint="@string/hint_edtnum2"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdAdd" />

        <RadioButton
            android:id="@+id/rdSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdSub" />

        <RadioButton
            android:id="@+id/rdPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdPro" />

        <RadioButton
            android:id="@+id/rdDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdDiv" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtResult"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCal"
        android:id="@+id/btnCal"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
